--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "core-js": "^3.6.5",
+    "pdfmake": "^0.2.8",
     "quasar": "^1.0.0"
   },
   "devDependencies": {
